Do not allow saving empty sites.

Bug: 762517
Change-Id: I66c248f00524900e2c240acb94bc1ed4b5654d5f